# ner-llm-finetuning

./: .gitignore  README.md  pyproject.toml
src/: annotate_sentences.py  app_ner.py  constants.py  evaluate_sentences.py  generate_synthetic_sentences.py  identify_annotation_errors.py  misc.ipynb  prompt_identify_annotation_errors.py  prompt_train.py  prompts_synthetic_data_annotation.py  prompts_synthetic_data_generation.py  settings.py  split_and_preprocess_dataset.py  train.py  train_checkpoint.ipynb  type.py
